kmdf BusDynamic & kmdf toaster Featured: add KdPrint sequence prefix.
git-svn-id: svn://10.22.3.84/windrv-learning/trunk@376 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/toaster/kmdf/bus_dynamic_vs2010/bus_dynamic_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/bus_dynamic_vs2010/bus_dynamic_vs2010.vcxproj
@@ -221,6 +221,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\bus\dynamic\BUSenum.h" />
+    <ClInclude Include="..\bus\dynamic\my_dbgprint.h" />
     <ClInclude Include="..\inc\driver.h" />
     <ClInclude Include="..\inc\public.h" />
   </ItemGroup>
