--- a/wdk7-samples/toaster/kmdf/func_featured_vs2010/func_featured_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/func_featured_vs2010/func_featured_vs2010.vcxproj
@@ -232,6 +232,7 @@
     <ClCompile Include="..\func\featured\wMi.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\func\featured\my_dbgprint.h" />
     <ClInclude Include="..\func\shared\toaster.h" />
   </ItemGroup>
   <ItemGroup>
