--- a/wdk7-samples/toaster/visualddk.props
+++ b/wdk7-samples/toaster/visualddk.props
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
     <stampinf_ARCH Condition="'$(Platform)'=='Win32'">x86</stampinf_ARCH>
@@ -10,12 +11,20 @@
     <ExecutablePath>$(WDKPATH)\bin\x86;$(ExecutablePath)</ExecutablePath>
   </PropertyGroup>
   <ItemDefinitionGroup>
+    <!--  -->
+    <PreBuildEvent>
+      <Command>@echo off
+if "%WDKPATH%"=="" (
+  echo.
+  echo [ERROR from visualddk.props] Env-var WDKPATH is empty. It must be set to the directory containing WDK 7.1
+  echo.
+  exit /b 4
+)
+      </Command>
+    </PreBuildEvent>
+
     <ClCompile>
       <AdditionalIncludeDirectories>..\inc;$(WDKPATH)\inc\wdf\kmdf\1.9;$(WDKPATH)\inc\ddk;$(WDKPATH)\inc\api;$(WDKPATH)\inc\crt;</AdditionalIncludeDirectories>
-    </ClCompile>
-  </ItemDefinitionGroup>
-  <ItemDefinitionGroup>
-    <ClCompile>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <PreprocessorDefinitions Condition="'$(Platform)'=='Win32'">_WIN32_WINNT=0x0501;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Platform)'=='x64'">_WIN32_WINNT=0x0601;%(PreprocessorDefinitions)</PreprocessorDefinitions>
