Add custom-build rule for .inx, so that .inx's modification can cause re-run of PostbuildEvent when pressing F7.

--- a/wdk7-samples/toaster/kmdf/func_simple_cpp_vs2010/func_simple_cpp_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/func_simple_cpp_vs2010/func_simple_cpp_vs2010.vcxproj
@@ -221,6 +221,12 @@
   </ItemGroup>
   <ItemGroup>
     <!--    <ResourceCompile Include="..\bus\static\busenum.rc" /> -->
+    <CustomBuild Include="..\inf-template\kmdf_toast_simple.inx">
+      <FileType>Document</FileType>
+      <Command>echo.</Command>
+      <Message>Detected newer: %(FullPath)</Message>
+      <Outputs>$(TargetPath)</Outputs>
+    </CustomBuild>
   </ItemGroup>
   <!--
     Introduce VSPG Framework code here.
