--- a/wdk7-samples/toaster/kmdf/func_simple_cpp_vs2010/func_simple_cpp_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/func_simple_cpp_vs2010/func_simple_cpp_vs2010.vcxproj
@@ -232,10 +232,10 @@
     Introduce VSPG Framework code here.
    -->
   <PropertyGroup>
-    <VSPG_BatDir_NoTBS>..\..\_VSPG</VSPG_BatDir_NoTBS>
+    <VSPG_BootsDir_NoTBS>..\..\_VSPG\boots</VSPG_BootsDir_NoTBS>
     <VSPG_FeedbackFile>$(ProjectDir)new_delete.cpp</VSPG_FeedbackFile>
   </PropertyGroup>
-  <Import Project="$(VSPG_BatDir_NoTBS)\_VSPG.props" />
+  <Import Project="$(VSPG_BootsDir_NoTBS)\_VSPG.props" />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
