--- a/wdk7-samples/toaster/kmdf/func_simple_cpp_vs2010/func_simple_cpp_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/func_simple_cpp_vs2010/func_simple_cpp_vs2010.vcxproj
@@ -228,6 +228,7 @@
       <Outputs>$(TargetPath)</Outputs>
     </CustomBuild>
   </ItemGroup>
+
   <!--
     Introduce VSPG Framework code here.
    -->
@@ -235,7 +236,10 @@
     <VSPG_BootsDir_NoTBS>..\..\_VSPG\boots</VSPG_BootsDir_NoTBS>
     <VSPG_FeedbackFile>$(ProjectDir)new_delete.cpp</VSPG_FeedbackFile>
   </PropertyGroup>
-  <Import Project="$(VSPG_BootsDir_NoTBS)\_VSPG.props" />
+  <ImportGroup Label="PropertySheets">
+    <Import Project="$(VSPG_BootsDir_NoTBS)\_VSPG.props" />
+  </ImportGroup>
+
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
