Update to VSPG version 240.

--- a/wdk7-samples/toaster/_VSPG/samples/Team-Postbuild8.bat.sample
+++ b/wdk7-samples/toaster/_VSPG/samples/Team-Postbuild8.bat.sample
@@ -27,7 +27,7 @@ REM call :EchoVar TargetDir
 REM call :EchoVar PlatformName
 REM call :EchoVar TargetName
 
-call :Echos START
+call :Echos START from %batdir%
 
 REM ==== Prelude Above ====
 
@@ -52,15 +52,13 @@ REM =============================
 REM ====== Functions Below ======
 REM =============================
 
-:SetErrorlevel
-exit /b %1
-
+REM %~n0%~x0 is batfilenam
 :Echos
-  echo [%batfilenam%] %*
+  echo [%~n0%~x0] %*
 exit /b
 
 :EchoExec
-  echo [%batfilenam%] EXEC: %*
+  echo [%~n0%~x0] EXEC: %*
 exit /b
 
 :EchoVar
