Adjust .vcxproj according to VSPG move.

--- a/wdk7-samples/toaster/kmdf/func_simple_cpp_vs2010/func_simple_cpp_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/func_simple_cpp_vs2010/func_simple_cpp_vs2010.vcxproj
@@ -233,7 +233,7 @@
     Introduce VSPG Framework code here.
    -->
   <PropertyGroup>
-    <VSPG_BootsDir_NoTBS>..\..\_VSPG\boots</VSPG_BootsDir_NoTBS>
+    <VSPG_BootsDir_NoTBS>..\..\..\..\_VSPG\boots</VSPG_BootsDir_NoTBS>
     <VSPG_FeedbackFile>$(ProjectDir)new_delete.cpp</VSPG_FeedbackFile>
   </PropertyGroup>
   <ImportGroup Label="PropertySheets">
