--- a/wdk7-samples/toaster/kmdf/func_simple_vs2010/func_simple_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/func_simple_vs2010/func_simple_vs2010.vcxproj
@@ -227,7 +227,7 @@
     Introduce VSPG Framework code here.
    -->
   <PropertyGroup>
-    <VSPG_BootsDir_NoTBS>..\..\_VSPG\boots</VSPG_BootsDir_NoTBS>
+    <VSPG_BootsDir_NoTBS>..\..\..\..\_VSPG\boots</VSPG_BootsDir_NoTBS>
   </PropertyGroup>
   <ImportGroup Label="PropertySheets">
     <Import Project="$(VSPG_BootsDir_NoTBS)\_VSPG.props" />
