Consolidate [inc] dir of wdm & kmdf into one copy, and rename to [include]

--- a/wdk7-samples/toaster/exe-dll/toast/toast.vcxproj
+++ b/wdk7-samples/toaster/exe-dll/toast/toast.vcxproj
@@ -44,7 +44,7 @@
   <ItemDefinitionGroup>
     <ClCompile>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\wdm\inc</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\include</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
