--- a/wdk7-samples/toaster/visualddk.props
+++ b/wdk7-samples/toaster/visualddk.props
@@ -14,12 +14,24 @@
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
+      <CallingConvention>StdCall</CallingConvention>
+      <RuntimeTypeInfo>false</RuntimeTypeInfo>
+      <BufferSecurityCheck>false</BufferSecurityCheck>
+      <StringPooling>true</StringPooling>
       <AdditionalIncludeDirectories>..\..\include;..\..\..\include;%(AdditionalIncludeDirectories);;;$(IncludePath)</AdditionalIncludeDirectories>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <PreprocessorDefinitions Condition="'$(Platform)'=='Win32'">_WIN32_WINNT=0x0501;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <PreprocessorDefinitions Condition="'$(Platform)'=='x64'">_WIN32_WINNT=0x0601;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WIN32_WINNT=0x0501;_DDK_%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="'$(Platform)'=='Win32'">_X86_;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="'$(Platform)'=='x64'">_AMD64_;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="'$(Configuration)'=='Debug'">_DEBUG;DBG=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="'$(Configuration)'=='Release'">_NDEBUG;DBG=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
+      <SubSystem>Native</SubSystem>
+      <Driver>Driver</Driver>
+      <DataExecutionPrevention></DataExecutionPrevention>
+      <RandomizedBaseAddress></RandomizedBaseAddress>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>WdfDriverEntry.lib;WdfLdr.lib;wmilib.lib;ntoskrnl.lib;hal.lib;ntstrsafe.lib;ksecdd.lib;BufferOverflowK.lib;wdmsec.lib</AdditionalDependencies>
       <AdditionalDependencies Condition="'$(Platform)'=='Win32'">int64.lib;exsup.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(TargetPath)</OutputFile>
@@ -32,3 +44,8 @@
     </BuildMacro>
   </ItemGroup>
 </Project>
+<!-- 
+	<ClCompile>      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+
+      <PreprocessorDefinitions>WIN32;_CONSOLE;_X86_;_DDK_;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+-->
