--- a/wdk7-samples/toaster/kmdf/bus/static/busenum.rc
+++ b/wdk7-samples/toaster/kmdf/bus/static/busenum.rc
@@ -4,7 +4,7 @@
 
 #define VER_FILETYPE    VFT_DLL
 #define VER_FILESUBTYPE VFT2_UNKNOWN
-#define VER_FILEDESCRIPTION_STR     "Framework Version of Toaster Static Bus Enumerator"
+#define VER_FILEDESCRIPTION_STR     "KMDF Toaster Static Bus Enumerator"
 #define VER_INTERNALNAME_STR        "statbus.sys"
 #define VER_ORIGINALFILENAME_STR    "statbus.sys"
 
