* Important fix in VSPG-Boots.bat(long existing), we should explicitly `exit /b %ERRORLEVEL%`. * ReplaceInFile update, check for common error cases (source file missing, target file deletion fail). * Move .inx to [toaster] level, no longer inside [kmdf].
Update VSPG version to 270

--- a/wdk7-samples/toaster/kmdf/func_simple_cpp_vs2010/func_simple_cpp_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/func_simple_cpp_vs2010/func_simple_cpp_vs2010.vcxproj
@@ -66,7 +66,7 @@
     <ClCompile Include="new_delete.cpp" />
     <ClCompile Include="toaster-simple.cpp" />
     <ClInclude Include="..\func\shared\toaster.h" />
-    <CustomBuild Include="..\inf-template\kmdf_toast_simple.inx">
+    <CustomBuild Include="..\..\inf-template\kmdf_toast_simple.inx">
       <FileType>Document</FileType>
       <Command>echo.</Command>
       <Message>Detected newer: %(FullPath)</Message>
