--- a/wdk7-samples/toaster/kmdf/bus_static_vs2010/bus_static_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/bus_static_vs2010/bus_static_vs2010.vcxproj
@@ -66,7 +66,7 @@
     <ClCompile Include="..\bus\static\buspdo.c" />
     <ClCompile Include="..\bus\static\wmi.c" />
     <ClInclude Include="..\bus\static\busenum.h" />
-    <CustomBuild Include="..\inf-template\kmdf_toastbus.inx">
+    <CustomBuild Include="..\..\inf-template\kmdf_toastbus.inx">
       <FileType>Document</FileType>
       <Command>echo.</Command>
       <Message>Detected newer: %(FullPath)</Message>
