* kmdf_toast_clsinstlr.inx OK, an inf referring to ClassInstaller. * Now a new way to call ToasterStampInf.bat. A driver project can prepare his own StampInfs.bat then generate multiple infs from multiple inxs. For example, func_simple_cpp_vs2010.vcxproj can generate infs from both kmdf_toast_simple.inx and kmdf_toast_clsinstlr.inx.

--- a/wdk7-samples/toaster/classinstaller/tostrcls.vcxproj
+++ b/wdk7-samples/toaster/classinstaller/tostrcls.vcxproj
@@ -75,6 +75,9 @@
       <Outputs>$(TargetPath)</Outputs>
     </CustomBuild>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
   <!-- import VSPG start -->
   <PropertyGroup>
     <VSPG_BootsDir_NoTBS>..\..\..\_VSPG\boots</VSPG_BootsDir_NoTBS>
