--- a/InterfaceEnum/InterfaceEnum_vs2010/InterfaceEnum_vs2010.vcxproj
+++ b/InterfaceEnum/InterfaceEnum_vs2010/InterfaceEnum_vs2010.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>InterfaceEnum_vs2010</RootNamespace>
-    <TargetName>InterfaceEnum</TargetName>
+    <ProjectGuid>{20220115-0000-0000-0000-144046000000}</ProjectGuid>
+    <ProjectName>InterfaceEnum</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)'=='Debug'" Label="Configuration">
