Update ToasterCoInstaller1.dll vcxproj, the concise style. Add kmdf_toast_coinstaller.inx to kernel driver func_simple_cpp_vs2010.vcxproj, now it generates 3 inf-s from one build.
Fix ToasterStampInf.bat's white-space-in-path defect.

--- a/wdk7-samples/toaster/kmdf/func_simple_cpp_vs2010/func_simple_cpp_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/func_simple_cpp_vs2010/func_simple_cpp_vs2010.vcxproj
@@ -72,6 +72,18 @@
       <Message>Detected newer: %(FullPath)</Message>
       <Outputs>$(TargetPath)</Outputs>
     </CustomBuild>
+    <CustomBuild Include="..\..\inf-template\kmdf_toast_clsinstlr.inx">
+      <FileType>Document</FileType>
+      <Command>echo.</Command>
+      <Message>Detected newer: %(FullPath)</Message>
+      <Outputs>$(TargetPath)</Outputs>
+    </CustomBuild>
+    <CustomBuild Include="..\..\inf-template\kmdf_toast_coinstaller.inx">
+      <FileType>Document</FileType>
+      <Command>echo.</Command>
+      <Message>Detected newer: %(FullPath)</Message>
+      <Outputs>$(TargetPath)</Outputs>
+    </CustomBuild>
   </ItemGroup>
   <!--
     Introduce VSPG Framework code here.
