Add calling of inf2cat.exe for Toaster-device KMDF project.
In ToasterDrv_vs2010.sln, we have Toaster-device KMDF project depend on CoInstaller and ClassInstaller vcxproj, bcz inf2cat requires that all DLLs referred to by the .inf exist already.

--- a/wdk7-samples/toaster/_VSPG/PostBuild-SyncOutput4.bat.sample
+++ b/wdk7-samples/toaster/_VSPG/PostBuild-SyncOutput4.bat.sample
@@ -47,7 +47,7 @@ for %%d in (%COPY_TO_DIRS%) do (
 		mkdir "!d_final!"
 	)
 	
-	call :CopyFilePatterns "%ExeDllDir%" "!d_final!" *.sys *.inf *.exe *.dll
+	call :CopyFilePatterns "%ExeDllDir%" "!d_final!" *.sys *.inf *.cat *.exe *.dll
 	if errorlevel 1 ( 
 		call :Echos [VSPG-Error] Error occurred when copying file to "!d_final!" .
 		exit /b 4 
