--- a/wdk7-samples/toaster/kmdf/bus_dynamic_vs2010/bus_dynamic_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/bus_dynamic_vs2010/bus_dynamic_vs2010.vcxproj
@@ -36,12 +36,10 @@
   <PropertyGroup>
     <TargetExt>.sys</TargetExt>
     <GenerateManifest>false</GenerateManifest>
+    <IncludePath>..\func\shared;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <!-- ======== Compile and Link options (Many driver-common ones are in visualddk.props) ======== -->
   <ItemDefinitionGroup>
-    <ClCompile>
-      <AdditionalIncludeDirectories>..\func\shared;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-    </ClCompile>
     <Link>
       <EntryPointSymbol>FxDriverEntry</EntryPointSymbol>
     </Link>
